IoC constructor based